--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/planixstalent/acceptance-tests#readme",
   "dependencies": {
+    "jest": "^20.0.4",
     "selenium-webdriver": "^3.4.0"
   }
 }
