Add basic http -> https proxy to add headers for tests and begin to stub out basic test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "node proxy & mocha -t 120000 --harmony_async_await"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/planixstalent/acceptance-tests#readme",
   "dependencies": {
-    "jest": "^20.0.4",
+    "chromedriver": "^2.30.1",
+    "http-proxy": "^1.16.2",
+    "https": "^1.0.0",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
     "selenium-webdriver": "^3.4.0"
   }
 }
