Refactor how tests are authored to simplify the API

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node proxy & mocha -t 120000 --harmony_async_await"
+    "test": "node proxy & mocha -t 120000 --harmony_async_await",
+    "testWithoutProxy": "mocha -t 120000 --harmony_async_await"
   },
   "repository": {
     "type": "git",
