--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/planixstalent/acceptance-tests#readme",
   "dependencies": {
+    "chalk": "^2.0.1",
     "chromedriver": "^2.30.1",
     "http-proxy": "^1.16.2",
     "https": "^1.0.0",
