--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node proxy & mocha -t 120000 --harmony_async_await",
-    "testWithoutProxy": "mocha -t 120000 --harmony_async_await"
+    "test" : "npm run start-proxy & npm run sequence-tests & npm run complex-tests",
+    "start-proxy": "node proxy",
+    "sequence-tests" : "mocha -t 120000 --harmony_async_await testRunner.js",
+    "complex-tests" : "mocha -t 120000 --harmony_async_await tests/"
   },
   "repository": {
     "type": "git",
