--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test" : "npm run start-proxy & npm run sequence-tests & npm run complex-tests",
-    "start-proxy": "node proxy",
+    "test" : "npm run sequence-tests & npm run complex-tests",
     "sequence-tests" : "mocha -t 120000 --harmony_async_await testRunner.js",
     "complex-tests" : "mocha -t 120000 --harmony_async_await tests/"
   },
